<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradienttwo"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/gradient_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/varelaround_regular"
                android:text="@string/updateyourhostel"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/editwardenname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/wardenname"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edithostelname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/hostel_name"
                android:text="@string/updateyourhostel"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/emailtext"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edithostelcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/hostel_city"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/hosteldesctext"
                android:maxLines="6"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editphonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/phonenumber"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="18dp"
            android:elevation="6dp"
            android:fontFamily="@font/varelaround_regular"
            android:text="@string/updatebtn"
            android:textColor="@color/darkblue"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </LinearLayout>
</ScrollView>