<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".Common.LoginSignUp.User_Startup_Screen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/startup_screen_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/impact"
        android:text="@string/startupscreen_slogan"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/varelaround_regular"
        android:text="@string/startupscreen_desc"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/yellow_filled_border_button"
            android:elevation="20dp"
            android:text="@string/Login"
            android:onClick="callLoginScreen"
            android:transitionName="transition_login"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/yellow_filled_border_button"
            android:elevation="20dp"
            android:text="@string/signup"
            android:transitionName="transition_Signup"
            android:onClick="callSignupScreen"
            android:textColor="@color/black" />


    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_we_work"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:onClick="Howwework"
        android:background="#00000000"
        />

</LinearLayout>