<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/browser_actions_bg_grey"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Common.AccountDeleted">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-70dp"
        android:src="@drawable/delete_png_compressed"
        app:tint="@android:color/holo_red_light"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/impact"
        android:gravity="center_horizontal"
        android:text="@string/accountdeleted"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/itim_regular"
        android:gravity="center_horizontal"
        android:text="@string/accountdeletedesc"
        android:textAlignment="center"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/yellow_filled_border_button"
        android:onClick="GoHome"
        android:text="@string/ok" />
</LinearLayout>