<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_bg_grey"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".Common.VerificationMessage">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/checked_image"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verificationemailsent"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="30dp"
        android:fontFamily="@font/impact"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verificationemailsentdesc"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/varelaround_regular"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/yellow_filled_border_button"
        android:onClick="Godashbaord"
        android:text="@string/ok" />
</LinearLayout>